test/invalid/64371_non_assoc_operator/non_assoc_operator.agu
-- Author: 64371, Ricardo Costa

let between(x: Int, min: Int, max: Int): Bool =
    min < x < max -- syntax error: non associative operator '<'
